# spacecraft-pose-estimation-trajectories

./: .gitignore
docker_noetic/: Dockerfile  run_docker.bash  run_docker_gpu.bash
ros-realsense/: realsense_ros_commands.txt
ros-realsense/charuco_pose_estimation/: CMakeLists.txt  cam_sat.json  package.xml  realsense_ros_commands.txt
ros-realsense/charuco_pose_estimation/src/: charuco_pose_server_stream.py  dummy_image_publisher.py  dummy_image_publisher_stream.py  dummy_pose_publisher.py  image_saver_service.py  spacecraft_detection_service.py  spacecraft_detection_service_p27.py  spacecraft_detection_service_stream.py  spacecraft_detection_service_stream_p27.py  test_response_service.py
ros-realsense/charuco_pose_estimation/srv/: CharUcoPose.srv  ImageSaver.srv  SpacecraftDetection.srv  TestResponse.srv
ros-realsense/realsenseros_pkg/: CMakeLists.txt  package.xml
ros-realsense/robot_pkg/: package.xml
ros-realsense/service_pkg/: CMakeLists.txt  package.xml
ros-realsense/transform_pkg/: CMakeLists.txt  package.xml
scr/: __init__.py
scr/aruco-makrers/: arucoPoseEstimation_image.py  arucoPoseEstimation_stream.py  arucoPoseEstimation_stream_rs.py  generate_marker.py  print_marker.py  print_marker_center2.py
scr/aruco-markers/: analyze_poses.py  aruco_board_pose_estim_frame.py  aruco_board_pose_estim_stream.py  aruco_marker_PoseEstimation_frame.py  aruco_marker_PoseEstimation_frame_au.py  aruco_marker_PoseEstimation_frame_cv42.py  aruco_marker_PoseEstimation_stream.py  charucoPoseEstim_frame.py  charucoPoseEstim_frame_cv42.py  charucoPoseEstim_stream.py  (+8 more)
(+96 files in other folders)
